--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ipsam, omnis nemo incidunt, quaerat alias impedit ducimus, reiciendis officia animi mollitia provident velit rem! Officia perspiciatis eligendi unde sint nulla.</p>
     </div>
+    <div>
+        <h3>My second Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ipsam, omnis nemo incidunt, quaerat alias impedit ducimus, reiciendis officia animi mollitia provident velit rem! Officia perspiciatis eligendi unde sint nulla.</p>
+    </div>
+    <div>
+        <h3>My third Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ipsam, omnis nemo incidunt, quaerat alias impedit ducimus, reiciendis officia animi mollitia provident velit rem! Officia perspiciatis eligendi unde sint nulla.</p>
+    </div>
 </body>
 </html>
