you to put incremental message

--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
         <h3>My third Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ipsam, omnis nemo incidunt, quaerat alias impedit ducimus, reiciendis officia animi mollitia provident velit rem! Officia perspiciatis eligendi unde sint nulla.</p>
     </div>
+    <div>
+        <h3>you to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+
+    </div>
 </body>
 </html>
