--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
             <li>git add .</li>
             <li>git commit -m"add a meaningful commit message"</li>
             <li>git push</li>
-        </ul>
-
+        </ul> 
+    </div>
+    <div>
+        <h3>nature is beautiful</h3>
+        <img src="images/nature.jpg" alt="">
     </div>
 </body>
 </html>
